# aiapp

./: README.md  package-lock.json  package.json  tailwind.config.ts
src-rust/: Cargo.toml
src-rust/src/: main.rs
src/app/: layout.tsx  page.tsx
src/app/api/ai/: route.ts
src/app/components/: AIChat.tsx
